# StratGenesis

./: .gitignore  CLAUDE.md  LICENSE  NOTES.md  README.md  ROADMAP.md  hello.py  pyproject.toml
docs/: alternative-data.md  configuration.md  data-sources.md  installation.md  usage.md
scripts/: add_evolve_markers.py  download_alphavantage.py  download_fred.py  download_sample.py  download_yahoo.py
specs/: phase-01-project-setup.md  phase-02-seed-strategies.md  phase-03-baseline-strategies.md  phase-04-llm-interface.md  phase-05-backtesting-utilities.md  phase-06-evolutionary-engine.md  phase-07-walk-forward-optimization.md  phase-08-main-entry-point.md  phase-09-testing.md  phase-10-documentation.md  phase-11-strategy-persistence.md  phase-12-dual-model-llm.md  phase-13-program-database.md  phase-14-diff-based-mutations.md  phase-15-multi-metric-evaluation.md  phase-16-research-data-agents.md  phase-17-multi-asset-portfolio.md  phase-18-production-monitoring.md
src/profit/: __init__.py  diff_utils.py  evaluation.py  evolver.py  llm_interface.py  main.py  program_db.py  strategies.py
tests/: conftest.py  test_diff_utils.py  test_evaluation.py  test_evolver.py  test_integration.py  test_llm_interface.py  test_program_db.py  test_strategies.py
