[project]
name = "profit"
version = "0.1.0"
description = "ProFiT: LLM-Driven Evolutionary Trading System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtesting",
    "pandas",
    "numpy",
    "openai",
    "anthropic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/profit"]
